# sherloc-pipeline

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .repo-hygiene.yaml  .ruff.toml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  DEPLOYMENT_CONTRACT.md  Dockerfile  LICENSE  Makefile  NOTICE  QUICKSTART.md  README.md  SECURITY.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements-lock.txt
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  improvement.yml  scientific_question.yml
.github/workflows/: ci.yml  contract-smoke.yml  publish.yml
alembic/: env.py
alembic/versions/: 0385ab87eb83_extend_context_images_for_vicar.py  1449d3a649cd_add_scan_class_parent_source_columns.py  172d8c59b5c9_rename_target_name_to_scan_name_add_.py  1dea6b52bb6f_add_target_type_fix_data_quality.py  1ed5cea6c32d_merge_map_mode_and_processing_state_.py  23b44fd37fd9_add_map_mode_e1_tables.py  412fc1e3ee92_add_user_sub_column_for_auth0_identity.py  6cff8ea9cb06_add_fit_modality_and_fluorescence_columns.py  73d700403ed9_add_processing_state_columns_to_scans.py  87cb884d3399_add_spectrograms_table.py  c8d2a36d1083_initial_phase_schema_with_all_tables.py  cd1b1897542e_add_pds_columns_backfill_loupe_defaults.py
deploy/: README.md  docker-compose.example.yml
deploy/env-templates/: sherloc.env.example
docs/: API.md  FRONTEND_HAZARDS.md  INVARIANTS.md  METHODS.md  architecture.md
docs/guides/: PDS_INGESTION_GUIDE.md
docs/schema/: AVERAGING_METHODS.md  LOUPE_DATA_FORMAT.md  PDS_DATA_FORMAT.md  SPECTRAL_REGIONS.md  UNIFIED_SCHEMA.md
notebooks/: spectral_analysis_example.ipynb
scripts/: check-forbidden-strings.sh  generate_golden_baseline.py  ingest_all_pds.sh  phase_e_invite.py  restart-server.sh  serve-public.sh  serve.sh  smoke_wal_multiprocess.py
src/sherloc_pipeline/: __init__.py  config.py  config.yaml
src/sherloc_pipeline/api/: __init__.py  spectral.py
src/sherloc_pipeline/cli/: __init__.py  app.py
src/sherloc_pipeline/core/: __init__.py  accepted_assembler.py  baseline.py  calibration.py  coordinates.py  data_ingestion.py  fitting.py  fluor_detection.py  fluor_fitting.py  fluor_id.py  laser_normalization.py  manifest.py  mineral_id.py  pds_client.py  pds_constants.py  pds_parsers.py  preprocessing.py  r123_stitching.py  r1_extraction.py  r2_keys.py  spatial.py  utils.py  voronoi.py
src/sherloc_pipeline/data/: __init__.py
src/sherloc_pipeline/database/: __init__.py  connection.py  models.py  pixl_models.py
src/sherloc_pipeline/ml/: __init__.py  base.py  clustering.py  distance.py  features.py  similarity.py
src/sherloc_pipeline/models/: __init__.py  base.py  context.py  fitting.py  ingestion.py  instrument.py  integration.py  pds.py  pixl.py  spectra.py  spectrogram.py
src/sherloc_pipeline/services/: __init__.py  base.py  classification.py  config.py  errors.py  fitting.py  image_ingestion.py  image_query.py  ingestion.py  map_fitting.py  metadata.py  paths.py  pds_ingestion.py  pipeline.py  pixl_ingestion.py  preprocessing.py  quality.py  review.py  runtime.py  segmentation.py  spatial.py  spectral.py  spectrogram.py
src/sherloc_pipeline/vision/: __init__.py  img_reader.py  morphometry.py  segmentation.py
src/sherloc_pipeline/visualization/: __init__.py  cooccurrence.py  fitting_plots.py  ingestion_plots.py  normalization_plots.py  plotting.py  preprocessing_plots.py  spatial.py  spectrograms.py
src/sherloc_pipeline/web/: __init__.py  app.py  (+9 more)
tests/: __init__.py  conftest.py  test_multi_section_csv.py  test_r123_stitching.py  test_smoke.py
tests/architecture/: test_layering.py
tests/contract/: test_alembic_contract.py  test_compose_example.py  test_container_smoke.py  test_dockerfile_contract.py  test_entrypoint_contract.py  test_env_contract.py  test_env_template_contract.py  test_image_identity.py  test_public_mode_unit.py
tests/fixtures/: manifest.json
tests/integration/: __init__.py  conftest.py  test_averaged_workflow.py  test_backfill_training.py  test_cli_fitting_options.py  test_cli_plot.py  test_cli_point_loupe.py  test_cli_point_mode.py  test_cli_subset_mode.py  test_co_occurrence.py  test_e2e_fixtures.py  test_pds_cross_validation.py  test_pds_download.py  test_pds_ingestion_service.py  test_pds_parsing.py  test_pds_roundtrip.py  test_point_dispatch.py  test_point_from_loupe.py  test_point_workflow.py  test_service_pipeline_integration.py
tests/regression/: test_golden_pipeline.py
tests/unit/: __init__.py  test_api_load_point.py  test_api_plot_overlay.py  test_api_plot_single.py  test_api_process.py  test_api_process_point.py  test_api_reference.py  test_auth.py  test_auth0_validator.py  test_auth_factory.py  test_auth_routes.py  test_averaging.py  test_background_subtraction.py  test_baseline_wrapper.py  test_cli_init.py  test_cli_pds_download.py  test_cli_trim_override.py  test_co_occurrence_flagging.py  test_config_resolution.py  test_export.py  test_findings_summary.py  test_fitting_thresholds.py  test_fitting_wrapper.py  test_json_output.py  test_loupe_loading.py  test_n_peaks_fitting.py  test_noise_window.py  test_pds_parsers.py  test_pipeline_loading.py  test_plot_generation.py  test_point_from_loupe.py  test_ppp_scaling.py  test_processing_state.py  test_r1_extraction.py  test_request_validation.py  test_scans_auth.py  test_scans_empty_db.py  test_silicate_hump.py  test_single_peak_fitting.py  test_spa_traversal.py  (+1 more)
(+201 files in other folders)
